add login auth swagger
