# controller/struct.go
@@ -45,3 +45,14 @@ type Geometry struct {
 	Type        string      `json:"type" bson:"type"`
 	Coordinates interface{} `json:"coordinates" bson:"coordinates"`
 }
+
+type User struct {
+	ID           	primitive.ObjectID `bson:"_id,omitempty" json:"_id,omitempty"`
+	FirstName  		string             `bson:"firstname,omitempty" json:"firstname,omitempty"`
+	LastName  		string             `bson:"lastname,omitempty" json:"lastname,omitempty"`
+	Email  			string             `bson:"email,omitempty" json:"email,omitempty"`
+	Password        string         	   `bson:"password,omitempty" json:"password,omitempty"`
+	Confirmpassword string         	   `bson:"confirmpass,omitempty" json:"confirmpass,omitempty"`
+	Salt 			string			   `bson:"salt,omitempty" json:"salt,omitempty"`
+}
+
